# kaevo-jellyfin-plugin

./: .gitignore  README.md  manifest.json
AI/: AI_MEMORY.md  CHANGELOG_AI.md  CURRENT_TASK.md  DECISIONS.md  IOS_ARCHITECTURE_PLAN.md  IOS_IMPLEMENTATION_NOTES.md  IOS_PHASE_1_SCOPE.md  IOS_TVOS_REFERENCE_MAP.md  KAEVO_CHARTER.md  KNOWN_ISSUES.md  OPENCODE_ENGINEER.md  SESSION_LOG.md
Docs/: APPLE_DEVELOPER_WORKSPACE.md  KAEVO_BRANDING_AND_UX_GUIDE.md  KAEVO_CLOUD_PLAYBACK_HANDOFF_2026-07-15.md  KAEVO_CURRENT_STATUS.md  KAEVO_NEXT_PHASES.md  KAEVO_PLAYBACK_READY_CHECKPOINT.md  KAEVO_PRODUCT_ARCHITECTURE.md
Kaevo Cloud/: .env.example  .gitignore  README.md
Kaevo Cloud/relay/: Dockerfile  pyproject.toml
Kaevo Cloud/relay/kaevo_relay/: __init__.py  app.py  security.py
Kaevo Cloud/relay/tests/: test_relay_security.py
Kaevo Home Server/: .env.example  DEPLOYMENT_REVIEW.md  Dockerfile  README.md  pyproject.toml  requirements.txt
Kaevo Home Server/Docs/: KAEVO_CLOUD_PLAYBACK_TUNNEL.md  KAEVO_HOME_SERVER_PROVIDER_ORCHESTRATOR.md
Kaevo Home Server/kaevo_home_server/: __init__.py  cloud_commands.py  cloud_connector.py  cloud_runtime.py  connector_identity.py  connector_lifecycle.py  main.py  playback_tunnel.py  relay_worker.py
Kaevo Home Server/tests/: test_cloud_commands.py  test_cloud_connector.py  test_connector_identity.py  test_connector_lifecycle.py  test_playback_tunnel.py  test_provider_orchestrator_contract.py  test_relay_worker.py
Kaevo Jellyfin Plugin/: .gitignore  README.md  manifest.json
docs/: JELLYFIN_PLUGIN_INSTALL_TEST.md  (+1 more)
(+178 files in other folders)
