[project]
name = "kaevo-home-server"
version = "0.1.0"
description = "Local Kaevo Home Server provider orchestrator"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "httpx>=0.27",
    "pydantic>=2.7",
    "eval-type-backport>=0.2",
    "uvicorn>=0.30",
    "websockets>=12,<15",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
include = ["kaevo_home_server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
