[project]
name = "kaevo-playback-relay"
version = "0.2.12"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.111", "uvicorn[standard]>=0.30"]

[project.optional-dependencies]
test = ["pytest>=8.2", "pytest-asyncio>=0.23", "httpx>=0.27"]

[tool.setuptools.packages.find]
include = ["kaevo_relay*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
